* enc/euc_jp.c (mbc_case_fold): check given string is valid or not,   and if invalid, return 1. [Bug #11486]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@52016 b2dd03c8-39d4-4d8f-98ff-823fe69b080e